--- a/consumables.html
+++ b/consumables.html
@@ -38,13 +38,13 @@
         <div class="hero">
           <div>
             <h1>Consumables</h1>
-            <div class="sub">Food + drinks + medical. Images hotlinked from official wiki files.</div>
+            <div class="sub">Food, beverages, and medicines. Prices supported (Buy/Sell) when known.</div>
           </div>
           <div class="badge" id="countBadge">0 items</div>
         </div>
 
         <div class="toolbar">
-          <input id="q" class="search" placeholder="Search consumables..." />
+          <input id="q" class="search" placeholder="Search Consumables (ex: water bottle, bandage, donut)..." />
           <div class="pills" id="pills"></div>
           <div class="viewtoggle">
             <button class="btn" id="gridBtn" type="button">Cards</button>
@@ -60,58 +60,45 @@
             <tbody id="tbody"></tbody>
           </table>
         </div>
+
       </div>
     </div>
   </div>
 
   <script src="wiki-shared.js"></script>
   <script>
-    // From official Consumables page section we opened (Food + Beverages + Medicines)
-    const DATA = [
-      // Food
-      { name:"Apple", image:"TM_AppleR_E.png", tags:["Food"], notes:"+HP 0 / +Hunger 20 / +Water 10 / +Stamina 0" },
-      { name:"Avocado (Half)", image:"TM_AvocadoHalf.png", tags:["Food"], notes:"stats unknown (official page shows ??)" },
-      { name:"Bacon", image:"TM_Bacon.png", tags:["Food"], notes:"stats unknown (official page shows ??)" },
-      { name:"Banana", image:"TM_Banana.png", tags:["Food"], notes:"+HP 5 / +Hunger 45 / +Water 15 / +Stamina 0" },
-      { name:"Breakfast Bagel", image:"TM_BreakfastBagel.png", tags:["Food"], notes:"stats unknown (official page shows ??)" },
-      { name:"Canned Beans", image:"TM_CannedBeans_I.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)" },
-      { name:"Canned Molassess", image:"TM_CannedMolassess.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)" },
-      { name:"Canned Peaches", image:"TM_CannedPeaches_I.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)" },
-      { name:"Canned Soup", image:"TM_CannedSoup_I.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)" },
-      { name:"Cheeseburger", image:"TM_Cheeseburger.png", tags:["Food"], notes:"stats unknown (official page shows ??)" },
-      { name:"Cookie", image:"TM_Cookie1_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)" },
-      { name:"Croissant", image:"TM_Croissant.png", tags:["Food"], notes:"stats unknown (official page shows ??)" },
-      { name:"Cupcake", image:"Cupcake_1.png", tags:["Food"], notes:"+HP 1 / +Hunger 25 / +Water 5 / +Stamina 0" },
-      { name:"Waffle", image:"TM_Waffle_E.png", tags:["Food"], notes:"+HP 1 / +Hunger 40 / +Water 7 / +Stamina 0" },
-      { name:"Dragon Fruit", image:"TM_DragonFruit_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)" },
-      { name:"Raw Egg", image:"TM_EggRaw.png", tags:["Food"], notes:"stats unknown (official page shows ??)" },
-      { name:"Cooked Meat", image:"TM_MeatCooked_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)" },
-      { name:"Meat Haunch (Cooked)", image:"TM_MeatHaunchCooked_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)" },
-      { name:"Meat Haunch (Raw)", image:"TM_MeatHaunchRaw_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)" },
-      { name:"Raw Meat", image:"TM_MeatRaw_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)" },
-      { name:"Pizza Slice", image:"TM_PizzaSlice_E.png", tags:["Food"], notes:"+HP 0 / +Hunger 20 / +Water 0 / +Stamina 0" },
-      { name:"Donut", image:"TM_Donut_W.png", tags:["Food"], notes:"+HP 1 / +Hunger 25 / +Water 2 / +Stamina 0" },
+    const items = [
+      // Food (from your raw list)
+      { name:"Apple", img:"TM_AppleR_E.png", tags:["Food"], id:"apple", notes:"+Hunger 20 • +Water 10", buy:null, sell:null },
+      { name:"Banana", img:"TM_Banana.png", tags:["Food"], id:"banana", notes:"+HP 5 • +Hunger 45 • +Water 15", buy:null, sell:null },
+      { name:"Cupcake", img:"Cupcake_1.png", tags:["Food"], id:"cupcake", notes:"+HP 1 • +Hunger 25 • +Water 5 • Variants", buy:null, sell:null },
+      { name:"Waffle", img:"TM_Waffle_E.png", tags:["Food"], id:"waffle", notes:"+HP 1 • +Hunger 40 • +Water 7", buy:null, sell:null },
+      { name:"Pizza Slice", img:"TM_PizzaSlice_E.png", tags:["Food"], id:"pizza-slice", notes:"+Hunger 20", buy:null, sell:null },
+      { name:"Donut", img:"TM_Donut_W.png", tags:["Food"], id:"donut", notes:"+HP 1 • +Hunger 25 • +Water 2", buy:null, sell:null },
 
       // Beverages
-      { name:"Water Bottle", image:"TM_WaterBottle_B_E.png", tags:["Beverage"], notes:"+Water up to 100; refillable" },
+      { name:"Water Bottle", img:"TM_WaterBottle_B_E.png", tags:["Beverages"], id:"water-bottle", notes:"Up to 100 Water; refillable", buy:null, sell:null },
 
-      // Medicines (official page shows no icons in the snippet; keep no image)
-      { name:"Medical Kit", image:null, tags:["Medicine"], notes:"+HP 100 / Uses 5 / Sell $500 / Buy $1,000" },
-      { name:"Epinephrine", image:null, tags:["Medicine"], notes:"+HP 10 / -Hunger 5 / -Water 10 / +Stamina 100 / Uses 1 / Sell $250 / Buy $500" },
-      { name:"Bandage", image:null, tags:["Medicine"], notes:"+HP 15 / Uses 5 (value N/A)" }
+      // Medicines (with known buy/sell from your raw)
+      { name:"Medical Kit", img:"", tags:["Medicines"], id:"medical-kit", notes:"+HP 100 • Max Uses 5 • Stamina -100", sell:"$500", buy:"$1,000" },
+      { name:"Epinephrine", img:"", tags:["Medicines"], id:"epinephrine", notes:"+HP 10 • Stamina +100 • Max Uses 1", sell:"$250", buy:"$500" },
+      { name:"Bandage", img:"", tags:["Medicines"], id:"bandage", notes:"+HP 15 • Max Uses 5", sell:"—", buy:"—" }
     ];
 
-    const COLUMNS = [
-      { key:"image", label:"Image" },
+    const columns = [
+      { key:"img", label:"Image" },
       { key:"name", label:"Name" },
-      { key:"notes", label:"Details" }
+      { key:"notes", label:"Effects / Notes" },
+      { key:"buy", label:"Buy" },
+      { key:"sell", label:"Sell" }
     ];
 
-    renderPage({
-      title: "Consumables",
-      data: DATA,
-      columns: COLUMNS,
-      defaultView: "cards"
+    wirePage({
+      title:"Consumables",
+      items,
+      columns,
+      activeHref:"consumables.html",
+      placeholderText:"Search Consumables..."
     });
   </script>
 </body>
