--- a/consumables.html
+++ b/consumables.html
@@ -68,16 +68,32 @@
   <script src="wiki-shared.js"></script>
   <script>
     const items = [
-      // Food (from your raw list)
-      { name:"Apple", img:"TM_AppleR_E.png", tags:["Food"], id:"apple", notes:"+Hunger 20 • +Water 10", buy:null, sell:null },
-      { name:"Banana", img:"TM_Banana.png", tags:["Food"], id:"banana", notes:"+HP 5 • +Hunger 45 • +Water 15", buy:null, sell:null },
-      { name:"Cupcake", img:"Cupcake_1.png", tags:["Food"], id:"cupcake", notes:"+HP 1 • +Hunger 25 • +Water 5 • Variants", buy:null, sell:null },
-      { name:"Waffle", img:"TM_Waffle_E.png", tags:["Food"], id:"waffle", notes:"+HP 1 • +Hunger 40 • +Water 7", buy:null, sell:null },
-      { name:"Pizza Slice", img:"TM_PizzaSlice_E.png", tags:["Food"], id:"pizza-slice", notes:"+Hunger 20", buy:null, sell:null },
-      { name:"Donut", img:"TM_Donut_W.png", tags:["Food"], id:"donut", notes:"+HP 1 • +Hunger 25 • +Water 2", buy:null, sell:null },
+      // Food
+      { name:"Apple", image:"TM_AppleR_E.png", tags:["Food"], notes:"+HP 0 / +Hunger 20 / +Water 10 / +Stamina 0", buy:null, sell:null },
+      { name:"Avocado (Half)", image:"TM_AvocadoHalf.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null },
+      { name:"Bacon", image:"TM_Bacon.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null },
+      { name:"Banana", image:"TM_Banana.png", tags:["Food"], notes:"+HP 5 / +Hunger 45 / +Water 15 / +Stamina 0", buy:null, sell:null },
+      { name:"Breakfast Bagel", image:"TM_BreakfastBagel.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
+      { name:"Canned Beans", image:"TM_CannedBeans_I.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
+      { name:"Canned Molassess", image:"TM_CannedMolassess.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
+      { name:"Canned Peaches", image:"TM_CannedPeaches_I.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
+      { name:"Canned Soup", image:"TM_CannedSoup_I.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
+      { name:"Cheeseburger", image:"TM_Cheeseburger.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
+      { name:"Cookie", image:"TM_Cookie1_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
+      { name:"Croissant", image:"TM_Croissant.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
+      { name:"Cupcake", image:"Cupcake_1.png", tags:["Food"], notes:"+HP 1 / +Hunger 25 / +Water 5 / +Stamina 0", buy:null, sell:null  },
+      { name:"Waffle", image:"TM_Waffle_E.png", tags:["Food"], notes:"+HP 1 / +Hunger 40 / +Water 7 / +Stamina 0", buy:null, sell:null  },
+      { name:"Dragon Fruit", image:"TM_DragonFruit_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
+      { name:"Raw Egg", image:"TM_EggRaw.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
+      { name:"Cooked Meat", image:"TM_MeatCooked_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
+      { name:"Meat Haunch (Cooked)", image:"TM_MeatHaunchCooked_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
+      { name:"Meat Haunch (Raw)", image:"TM_MeatHaunchRaw_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
+      { name:"Raw Meat", image:"TM_MeatRaw_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
+      { name:"Pizza Slice", image:"TM_PizzaSlice_E.png", tags:["Food"], notes:"+HP 0 / +Hunger 20 / +Water 0 / +Stamina 0", buy:null, sell:null  },
+      { name:"Donut", image:"TM_Donut_W.png", tags:["Food"], notes:"+HP 1 / +Hunger 25 / +Water 2 / +Stamina 0", buy:null, sell:null  },
 
       // Beverages
-      { name:"Water Bottle", img:"TM_WaterBottle_B_E.png", tags:["Beverages"], id:"water-bottle", notes:"Up to 100 Water; refillable", buy:null, sell:null },
+      { name:"Water Bottle", image:"TM_WaterBottle_B_E.png", tags:["Beverage"], notes:"+Water up to 100; refillable", buy:null, sell:null  },
 
       // Medicines (with known buy/sell from your raw)
       { name:"Medical Kit", img:"", tags:["Medicines"], id:"medical-kit", notes:"+HP 100 • Max Uses 5 • Stamina -100", sell:"$500", buy:"$1,000" },
